tests/valid/hasdoc.nim
# Count: 2
# Negative count: 0

## Template doc.
var i* = 0 ## Template doc.
