tests/invalid/hasdoc.nim
# Count: 0
# Negative count: 2

var i* = 0
